Wed Jun  9 11:40:16 1999  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

	* readelf.c (dump_section): Cast values from byte_get to
 	[unsigned] long for printing, in case it is wider than long.
	(display_block): Likewise.
	(read_and_display_attr): Likewise.
	(decode_location_expression): Likewise.  Don't depend on
 	evaluation order.

Mon Jun  7 12:14:57 1999  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

	* windres.c (usage): Fix typo.

1999-06-04  Nick Clifton  <nickc@cygnus.com>

	* readelf.c: Use 64bit wide fields in internal strcutures even if
	targetting a 32bit architecture.
	(dump_relocations): Take a new parameter - the number of symbols
	in the symbol table.

1999-06-04  Nick Clifton  <nickc@cygnus.com>

	* readelf.c: Add support for 64bit ELF files.

1999-06-03  Nick Clifton  <nickc@cygnus.com>

	* dlltool.c (mcore_elf_gen_out_file): Use constants for temporary
	file names. 

Wed Jun  2 12:34:36 1999  Richard Henderson  <rth@cygnus.com>

	* dlltool.c (gen_exp_file): Revert 19990411 change.

Mon May 31 09:56:22 1999  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

	* readelf.c (process_relocs): Determine type of reloc from
	DT_PLTREL and from section type.

1999-05-29  Nick Clifton  <nickc@cygnus.com>

	* readelf.c (get_elf_class): Display unknown class number.
	(get_data_encoding): Display unknown encoding number.
	(get_osabi_name): Display unknown ABI number.
	(process_file_header): Display unknown version number.

1999-05-29  Nick Clifton  <nickc@cygnus.com>

	* readelf.c (dump_relocations): Fix typo.

1999-05-28  Nick Clifton  <nickc@cygnus.com>

	* readelf.c (dump_relocations): Add extra parameter: is_rela to
	specify the kind of relocations to be dumped.  Call guess_is_rela
	if this parameter has a value of UNKNOWN.
	(guess_is_rela): New function:  Guess the kind of reloc being used
	baced on the machine number.
	(process_relocs): Determine type of reloc before calling
	dump_relocations.

1999-05-28  Ian Lance Taylor  <ian@zembu.com>
